# tradinglab

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: run.yml  run_exp.yml
data/: README.md
data/sample/: btc_1d.parquet  btcusdt_10m.parquet
docs/: definition-of-done.md  run-contract.md
docs/strategy/: README.md
research/notebooks/learn/: 01_sma_ema_rma_playground.ipynb  Untitled.ipynb
scripts/: check_writer.py  fetch_ohlcv.py  make_sample_data.py  run_backtest.py  run_experiment.py  validate_data.py
src/tradinglab/data/: binance_http.py  contracts.py  exchange_client.py  ohlcv_fetcher.py  store.py  timeframes.py
src/tradinglab/experiments/: __init__.py  base.py  exp000_smoke.py  exp001_adx_bins.py  registry.py  runner.py
src/tradinglab/features/: adx.py  returns.py
src/tradinglab/reports/: artifacts.py
src/tradinglab/utils/: logging.py
tests/: test_data_contracts.py  test_experiment_smoke.py  test_incremental_since.py  test_smoke.py  test_store_contracts.py  test_validate_data_metrics.py
